syntax = "proto3";

package cats;

service CatService {
  rpc List (Empty) returns (CatList) {}
  rpc Insert (CatInput) returns (Cat) {}
  rpc Get (CatById) returns (Cat) {}
  rpc Delete (CatById) returns (Empty) {}
  rpc Watch (Empty) returns (stream Cat) {}
}

message Empty {}

message CatInput {
  string name = 1;
  int32 age = 2;
}

message Cat {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message CatList {
  repeated Cat cats = 1;
}

message CatById {
  int32 id = 1;
}
